--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>My testing env</title>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     
+    <style>
+        h2 {
+            color: green;
+        }
+    </style>
+    
 </head>
 <body>
 <div id="page-wrapper">
