--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>My testing env</title>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-    <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script>
+<!--     <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script> -->
     <script>
         window.OneSignal = window.OneSignal || [];
         OneSignal.push(function() {
