--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     
     <meta charset="UTF-8">
     <title>My testing env</title>
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<!--     <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script> -->
+<!--     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script> -->
+    <script src="https://shaycpm.github.io/testing/OneSignalSDKWorker.js"></script>    
+    <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script>
     <script>
         window.OneSignal = window.OneSignal || [];
         OneSignal.push(function() {
