--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://shaycpm.github.io/testing/OneSignalSDKWorker.js"></script>    
     <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script>
     
-<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script> -->
 <script>
   window.OneSignal = window.OneSignal || [];
   OneSignal.push(function() {
