--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </script>
     <meta charset="UTF-8">
     <title>My testing env</title>
-    <script src="https://shaycpm.github.io/testing/OneSignalSDKWorker.js"></script>    
-    <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script>
+<!--     <script src="https://shaycpm.github.io/testing/OneSignalSDKWorker.js"></script>     -->
+<!--     <script src="https://shaycpm.github.io/testing/OneSignalSDKUpdaterWorker.js"></script> -->
 </head>
 <body>
 <div id="page-wrapper">
