--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <title>My testing env</title>
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "44f39e94-d6e6-427c-8c62-3c858c672ec3",
-    });
-  });
-</script>
+    <script>
+        function testing() {
+            window.OneSignal = window.OneSignal || [];
+            OneSignal.push(function () {
+                OneSignal.init({
+                    appId: "59d06656-c81b-4d4f-b1d5-e0ff659e5144",
+                });
+            });
+        }
+
+        parent.postMessage("loadMyOrders", testing());
+    </script>
 </head>
 <body>
 <div id="page-wrapper">
