--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>My testing env</title>
-<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script>
-        function test() {
+        window.runTest = function () {
             window.OneSignal = window.OneSignal || [];
             OneSignal.push(function () {
                 OneSignal.init({
@@ -13,7 +13,11 @@
                 });
             });
         }
-        test();
+        // window.someVal = function () {
+        //     alert('Hello World');
+        // }
+        // window.someVal()
+        window.runTest();
     </script>
 </head>
 <body>
