--- a/index.html
+++ b/index.html
@@ -21,34 +21,6 @@ function isMob() {
     });
 }
 
-function detectMouseMovement() {
-    let addListener, removeListener;
-    if (document.addEventListener) {
-        addListener = function (el, evt, f) {
-            return el.addEventListener(evt, f, false);
-        };
-        removeListener = function (el, evt, f) {
-            return el.removeEventListener(evt, f, false);
-        };
-    } else {
-        addListener = function (el, evt, f) {
-            return el.attachEvent('on' + evt, f);
-        };
-        removeListener = function (el, evt, f) {
-            return el.detachEvent('on' + evt, f);
-        };
-    }
-
-    var myListener = function () {
-        removeListener(document, 'mousemove', myListener);
-        console.log('true')
-        return true;
-    };
-
-    addListener(document, 'mousemove', myListener);
-}
-
-
 function isSafari() {
     return window.safari !== undefined;
 }
@@ -65,34 +37,34 @@ OneSignal.push(function () {
 
     });
     // if (isSafari()) {
-    if (confirm('select')) {
-        window.setTimeout(function () {
-            OneSignal.showNativePrompt();
-        }, 1000)
-    }
+//     if (confirm('select')) {
+//         window.setTimeout(function () {
+//             OneSignal.showNativePrompt();
+//         }, 1000)
+//     }
     // }
-    OneSignal.on('subscriptionChange', function (isSubscribed) {
-        OneSignal.getUserId(function (userId) {
-            if (isSubscribed) {
-                OneSignal.sendTag("device", urlParams.get('device'));
-                OneSignal.sendTag("country", urlParams.get('country'));
-                OneSignal.sendTag("os", urlParams.get('os'));
-                OneSignal.sendTag("isp", urlParams.get('isp'));
-                OneSignal.sendTag("source", urlParams.get('source'));
-                if (isMob()) {
-                    OneSignal.sendTag('platform', 'mobile');
-                } else {
-                    OneSignal.sendTag('platform', 'desktop');
-                }
-                let xhr = new XMLHttpRequest();
+//     OneSignal.on('subscriptionChange', function (isSubscribed) {
+//         OneSignal.getUserId(function (userId) {
+//             if (isSubscribed) {
+//                 OneSignal.sendTag("device", urlParams.get('device'));
+//                 OneSignal.sendTag("country", urlParams.get('country'));
+//                 OneSignal.sendTag("os", urlParams.get('os'));
+//                 OneSignal.sendTag("isp", urlParams.get('isp'));
+//                 OneSignal.sendTag("source", urlParams.get('source'));
+//                 if (isMob()) {
+//                     OneSignal.sendTag('platform', 'mobile');
+//                 } else {
+//                     OneSignal.sendTag('platform', 'desktop');
+//                 }
+//                 let xhr = new XMLHttpRequest();
 
-                xhr.open("GET", "https://lotuspush.club/click.php?cnv_id=" + urlParams.get('cid'), true);
-                xhr.send(null);
-            }
-        });
-    });
+//                 xhr.open("GET", "https://lotuspush.club/click.php?cnv_id=" + urlParams.get('cid'), true);
+//                 xhr.send(null);
+//             }
+//         });
+//     });
 });
-    </script>
+</script>
 </head>
 <body>
 <div id="page-wrapper">
